2002-08-21  Elliot Lee  <sopwith@redhat.com>

	* audio.c: set esd_audio_fd = -1 when we esd_audio_close()
	* esd.c: Set esd_forced_standby = 0 when we resume.

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

2002-08-18  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* players.c: (read_player): fix crash on Solaris 9
	(bug #88810, patch from Balamurali Viswanathan <balamurali.viswanathan@wipro.com>)

2002-08-16  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: add summary info at end of configure (Tom Prado
	<tprado@charter.net>)
	* esd.c: (main): Fix --help (Tom Prado <tprado@charter.net>)

2002-08-07  Anju P S <anju.premachandran@wipro.com>

	*esdsample.c: (main): Fixed buffer-overflows.
	*esddsp.c: (unlink), (sockaddr_mangle):Fixed buffer-overflows.
	*esd.c: (safe_mksocketdir):Added code to check the return value 
	of chmod() call.Fixes bug #89609

2002-07-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esdctl.c: (main): fix segfault when using -s (Debian)
	* esddsp.in: No longer use LD_PRELOAD_PATH  (Debian)

2002-07-09  Brian Cameron  <Brian.Cameron@sun.com>

	* configure.in: Added -with-esd-dir option.
	* esound.pc.in: Added esd_serverdir
	* Makefile.am:  ADD -DSERVERDIR to INCLUDES
	* esdlib.c:     Call esd from SERVERDIR.  Replaced sizeof()
                    call with strlen() which is more appropriate.
	Allow users to specify the location of the esd executable.  This
	is useful for setups which want to place the esd daemon in
	libexec rather than bin.

2002-06-19  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.28

2002-06-19    <b@cuba.mandrakesoft.com>

        * esdlib.c: (is_host_local), (esd_open_sound):